--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
   "license": "ISC",
   "description": "",
   "type": "module",
-  "devDependencies": {
-    "prisma": "^6.0.1"
-  },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "express": "^4.21.2"
   }
 }
